--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,50 +13,50 @@ env:
 
 jobs:
   test-and-lint:
-    name: Test and Lint
+    name: 🧪 Test and 🧹 Lint
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: 📥 Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Go
+      - name: 🔧 Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: ${{ env.GO_VERSION }}
           cache-dependency-path: go.sum
 
-      - name: Get dependencies
+      - name: 📦 Get dependencies
         run: go mod download
 
-      - name: Run tests with coverage
+      - name: ✅ Run tests with coverage
         run: |
           go test -coverprofile=coverage.out -covermode=atomic -race -v ./...
           go tool cover -func=coverage.out
 
-      - name: Upload coverage report
+      - name: 📤 Upload coverage report
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
           path: coverage.out
 
-      - name: Generate HTML coverage report
+      - name: 🌐 Generate HTML coverage report
         run: go tool cover -html=coverage.out -o coverage.html
 
-      - name: Upload HTML coverage report
+      - name: 📤 Upload HTML coverage report
         uses: actions/upload-artifact@v4
         with:
           name: coverage-html-report
           path: coverage.html
 
-      - name: Run vet
+      - name: 🕵️ Run vet
         run: go vet ./...
 
-      - name: Run staticcheck
+      - name: 🧰 Run staticcheck
         run: |
           go install honnef.co/go/tools/cmd/staticcheck@latest
           staticcheck ./...
 
-      - name: Install and run golangci-lint
+      - name: 🔍 Install and run golangci-lint
         run: |
           # Install golangci-lint
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin
@@ -64,19 +64,19 @@ jobs:
           golangci-lint run --timeout 5m -v
 
   dockerfile-validation:
-    name: Dockerfile Validation
+    name: 🐳 Dockerfile Validation
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: 📥 Checkout code
         uses: actions/checkout@v4
 
-      - name: Run Hadolint
+      - name: 🧼 Run Hadolint
         uses: hadolint/hadolint-action@v3.1.0
         with:
           dockerfile: Dockerfile
           failure-threshold: warning
 
-      - name: Run Dockle (Dockerfile analysis)
+      - name: 🛡️ Run Dockle (Dockerfile analysis)
         if: ${{ github.event_name == 'push' }}
         uses: docker://goodwithtech/dockle:v0.4.14
         with:
@@ -84,27 +84,27 @@ jobs:
 
   # Uncomment the following job to enable Docker image build and push
   # build:
-  #   name: Build Docker Image
+  #   name: 🏗️ Build Docker Image
   #   needs: [test-and-lint, dockerfile-validation]
   #   runs-on: ubuntu-latest
   #   steps:
-  #     - name: Checkout code
+  #     - name: 📥 Checkout code
   #       uses: actions/checkout@v4
 
-  #     - name: Set up QEMU
+  #     - name: 🧬 Set up QEMU
   #       uses: docker/setup-qemu-action@v4
 
-  #     - name: Set up Docker Buildx
+  #     - name: 🛠️ Set up Docker Buildx
   #       uses: docker/setup-buildx-action@v4
 
-  #     - name: Login to Docker Hub
+  #     - name: 🔐 Login to Docker Hub
   #       if: github.ref == 'refs/heads/main'
   #       uses: docker/login-action@v4
   #       with:
   #         username: ${{ secrets.DOCKER_HUB_USERNAME }}
   #         password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-  #     - name: Build and push Docker image
+  #     - name: 📦 Build and push Docker image
   #       uses: docker/build-push-action@v5
   #       with:
   #         context: .
@@ -116,16 +116,16 @@ jobs:
   #         cache-to: type=gha,mode=max
 
   coverage:
-    name: Coverage Report
+    name: 📊 Coverage Report
     needs: test-and-lint
     runs-on: ubuntu-latest
     steps:
-      - name: Download coverage report
+      - name: 📥 Download coverage report
         uses: actions/download-artifact@v4
         with:
           name: coverage-report
 
-      - name: Upload to Codecov
+      - name: ☁️ Upload to Codecov
         uses: codecov/codecov-action@v4
         with:
           file: coverage.out
