wip: attempt at fixing pipeline #1

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,9 +79,6 @@ jobs:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
 
-      - name: 📄 Write .env to disk (runtime only)
-        run: echo "${{ secrets.ENV_FILE }}" > .env
-
       - name: 🏗️ Build an image from Dockerfile
         env:
           DOCKER_CONTENT_TRUST: 1
@@ -97,7 +94,9 @@ jobs:
           ignore: "CIS-DI-0001,DKL-DI-0006"
 
       - name: 🧪 Run container with .env (optional test)
-        run: docker run --rm --env-file .env ${{ env.DOCKER_IMAGE_NAME }}:scan
+        run: |-
+          echo "${{ secrets.ENV_FILE }}" > .env
+          docker run --rm --env-file .env ${{ env.DOCKER_IMAGE_NAME }}:scan
 
   # Uncomment the following job to enable Docker image build and push
   # build:
