--- a/docker-test-compose.yml
+++ b/docker-test-compose.yml
@@ -1,6 +1,6 @@
 services:
   server:
-    image: mammoth/mammoth.server:latest
+    image: mammoth/mammoth.server:scan
     ports:
       - "8080:8080"
     environment:
